fixed overflow on blog post & loading on about page

--- a/src/pages/blog-post/BlogPost.css
+++ b/src/pages/blog-post/BlogPost.css
@@ -1,6 +1,7 @@
 figure {
-  width: 100vw !important;
+  width: 100% !important;
 }
+
 
 
 
